--- a/package.json
+++ b/package.json
@@ -2,12 +2,17 @@
   "name": "package",
   "version": "0.0.0",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "gulp-concat": "^2.5.2",
+    "main-bower-files": "^2.8.0",
+    "uglify-js": "^2.4.23"
+  },
   "devDependencies": {
     "autoprefixer-core": "^3.1.1",
     "browser-sync": "^1.5.4",
     "del": "^0.1.3",
     "gulp": "^3.8.8",
+    "gulp-filter": "^2.0.2",
     "gulp-imagemin": "^1.0.1",
     "gulp-jade": "^0.8.0",
     "gulp-jshint": "^1.8.5",
