--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "gulp-jshint": "^1.8.5",
     "gulp-less": "^1.3.6",
     "gulp-load-plugins": "^0.7.0",
+    "gulp-minify-css": "^1.1.6",
     "gulp-postcss": "^2.0.0",
+    "gulp-rename": "^1.2.2",
     "gulp-util": "^3.0.1"
   }
 }
