--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "license": "MIT",
   "dependencies": {
     "gulp-concat": "^2.5.2",
-    "main-bower-files": "^2.8.0",
-    "uglify-js": "^2.4.23"
+    "main-bower-files": "^2.8.0"
   },
   "devDependencies": {
     "autoprefixer-core": "^3.1.1",
@@ -21,6 +20,7 @@
     "gulp-minify-css": "^1.1.6",
     "gulp-postcss": "^2.0.0",
     "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.1"
   }
 }
